data/forge_javadoc/1.7.10/processed/net_minecraft_command_server_CommandBanIp.md
# CommandBanIp

**Inheritance:** java.lang.Object → net.minecraft.command.CommandBase → net.minecraft.command.server.CommandBanIp

## Class signature

```java
public class CommandBanIp extends CommandBase
```

## Constructors

- `CommandBanIp()`

## Methods

- `java.util.List addTabCompletionOptions(ICommandSender p_71516_1_, java.lang.String[] p_71516_2_)`
- `boolean canCommandSenderUseCommand(ICommandSender p_71519_1_)`
- `protected void func_147210_a(ICommandSender p_147210_1_, java.lang.String p_147210_2_, java.lang.String p_147210_3_)`
- `java.lang.String getCommandName()`
- `java.lang.String getCommandUsage(ICommandSender p_71518_1_)`
- `int getRequiredPermissionLevel()`
- `void processCommand(ICommandSender p_71515_1_, java.lang.String[] p_71515_2_)`

## Fields

- `static java.util.regex.Pattern field_147211_a`